--- a/public/index.html
+++ b/public/index.html
@@ -21,29 +21,23 @@
       name="description"
       content="월급을 새로 정의하다, 세상에 없던 급여 계산 서비스! PAYDAY "
     />
-    <meta itemprop="image" content= />
-    <meta property="og:url" content="%PUBLIC_URL%/favicon.ico" />
+    <meta itemprop="image" content="%PUBLIC_URL%/logo.png" />
+    <meta property="og:url" content="https://paydayapp.netlify.app/" />
     <meta property="og:site_name" content="PAYDAY" />
-    <meta
-      property="og:title"
-      content="월급을 새로 정의하다, 세상에 없던 급여 계산 서비스! PAYDAY"
-    />
-    <meta property="og:image" content="%PUBLIC_URL%/favicon.ico" />
+    <meta property="og:title" content="PAYDAY" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
     <meta
       property="og:description"
       content="월급을 새로 정의하다, 세상에 없던 급여 계산 서비스! PAYDAY"
     />
-    <meta name="twitter:card" content="%PUBLIC_URL%/favicon.ico" />
+    <meta name="twitter:card" content="%PUBLIC_URL%/logo.png" />
     <meta name="twitter:title" content="PAYDAY" />
-    {description ?
     <meta
       name="twitter:description"
       content="월급을 새로 정의하다, 세상에 없던 급여 계산 서비스! PAYDAY"
     />
-    : null}
-    <meta name="twitter:image" content="%PUBLIC_URL%/favicon.ico" />
-    : null
-    <meta name="twitter:site" content="PAYDAY" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo.png" />
+    <meta name="twitter:site" content="https://paydayapp.netlify.app/" />
     <title>PAYDAY</title>
   </head>
   <body>
