--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,14 @@
       rel="stylesheet"
     />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta
+      name="google-site-verification"
+      content="qPP5-J86-pDZ87bhi3p3bS9_T6-g6apWau9w0ztccQw"
+    />
+    <meta
+      name="naver-site-verification"
+      content="4cec8e48c083b25e424f92a135e5077f9986fbd9"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-icon.png" />
