--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,7 @@
       content="월급을 새로 정의하다, 세상에 없던 급여 계산 서비스! PAYDAY"
     />
     <meta itemprop="image" content="%PUBLIC_URL%/logo.png" />
-
-    <!-- please change the official link -->
-    <meta property="og:url" content="https://paydayapp.netlify.app/" />
+    <meta property="og:url" content="https://everypd.co.kr/" />
     <meta property="og:site_name" content="PAYDAY" />
     <meta property="og:title" content="PAYDAY" />
     <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
@@ -44,7 +42,7 @@
       content="월급을 새로 정의하다, 세상에 없던 급여 계산 서비스! PAYDAY"
     />
     <meta name="twitter:image" content="%PUBLIC_URL%/logo.png" />
-    <meta name="twitter:site" content="https://paydayapp.netlify.app/" />
+    <meta name="twitter:site" content="https://everypd.co.kr/" />
     <title>PAYDAY</title>
   </head>
   <body>
