--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,27 @@
         pluginKey: `%REACT_APP_CHAT_SERVICE%`,
       });
     </script>
+    <script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
+    <script type="text/javascript">
+      if (!wcs_add) var wcs_add = {};
+      wcs_add['wa'] = 'fb8f96a1afa1b0';
+      if (window.wcs) {
+        wcs_do();
+      }
+    </script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-HD9YZLMZHW"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-HD9YZLMZHW');
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
