--- a/public/index.html
+++ b/public/index.html
@@ -70,14 +70,14 @@
     <script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
     <script type="text/javascript">
       if (!wcs_add) var wcs_add = {};
-      wcs_add['wa'] = 'fb8f96a1afa1b0';
+      wcs_add['wa'] = 'fb88aff20859c0';
       if (window.wcs) {
         wcs_do();
       }
     </script>
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-HD9YZLMZHW"
+      src="https://www.googletagmanager.com/gtag/js?id=G-FK0TT763X9"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -86,7 +86,7 @@
       }
       gtag('js', new Date());
 
-      gtag('config', 'G-HD9YZLMZHW');
+      gtag('config', 'G-FK0TT763X9');
     </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
